--- a/css/setting.scss
+++ b/css/setting.scss
@@ -1,3 +1,19 @@
 body{
   font-family: 'Microsoft JhengHei',Tahoma, Helvetica, Arial, "Microsoft Yahei","微软雅黑", STXihei, "华文细黑", sans-serif;
 }
+//@import "bootstrap-sprockets";
+//@import "bootstrap/variables";
+//@import "bootstrap/mixins";
+//@import "bootstrap/normalize";
+//@import "bootstrap/print";
+//@import "bootstrap/forms";
+//@import "bootstrap/scaffolding";
+//@import "bootstrap/type";
+//@import "bootstrap/grid";
+//@import "bootstrap/component-animations";
+//@import "bootstrap/dropdowns";
+//@import "bootstrap/navs";
+//@import "bootstrap/navbar";
+//@import "bootstrap/carousel";
+//@import "bootstrap/utilities";
+//@import "bootstrap/responsive-utilities";
